Resolve issues surrounding modal width on mobile

--- a/src/assets/steemgigs.scss
+++ b/src/assets/steemgigs.scss
@@ -76,6 +76,25 @@ p {
   border: 1px solid #6361D0;
 }
 
+.primary.is-disabled {
+  background: #6361d073;
+  border: 1px solid #6361d073;
+  border: 0;
+}
+
+.primary:hover {
+  background: #6361D0 !important;
+  border: 1px solid #6361D0 !important;
+  opacity: 0.6;
+}
+
+.secondary:hover {
+    background: 0 !important;
+    opacity: 0.6;
+    color: #606266;
+    border-color: #dcdfe6;
+}
+
 a {
   color: #3f51b5;
   cursor: pointer;
@@ -2075,6 +2094,10 @@ hr {
   height: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
   height: fill-available;
   border-radius: 5px;
+  }
+
+  .el-dialog {
+    min-width: 365px;
   }
 
   .el-dialog__body {
